@@ -1,0 +1,8 @@
+blib
+Makefile
+pm_to_blib
+test_dir
+README
+*.bs
+*.old
+*.bak
