@@ -1,8 +1,8 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Parallel-Forker
-version:      1.221
-version_from: Forker.pm
+version:      1.222
+version_from: lib/Parallel/Forker.pm
 installdirs:  site
 requires:
     Proc::ProcessTable:            0.4
