@@ -1,8 +1,8 @@
 #!/usr/bin/perl -w
-# $Id: 00_pod.t 30544 2007-01-23 13:55:35Z wsnyder $
+# $Id: 00_pod.t 50266 2008-01-29 19:36:35Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'make test' to test this package
 #
-# Copyright 2000-2007 by Wilson Snyder.  This program is free software;
+# Copyright 2000-2008 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # Lesser General Public License or the Perl Artistic License.
 
